styles.css
h1{
    margin: 0;   
}

.header-inner {
    display: flex;
    align-items: center;
    justify-content: space-between; /* left, center, right */
    padding: 10px 20px;
}

.logo-area {
    display: flex;
    justify-content: center;
    flex: 1;
}

.logo{
    width: 110px;
    height: auto;
    display: block;
}

.nav {
    flex: 1;
}

.header-right {
    flex: 1;
    display: flex;
    justify-content: flex-end;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    background-color: white;
    color: black;
}

.site-header {
    background-color: white;
    border-bottom: 1px solid white;
}


.main-nav {
    display: flex;
}

.nav-link {
    text-decoration: none;
    color: black;
    font: open sans, sans-serif;
    font-size: 16px;
    padding: 6px 14px;
    border-radius: 4px;
}

.nav-link:hover {
   color: rgb(43, 43, 242);
}

.sign-in-btn {
    background-color: rgb(43, 43, 242);
    color: white;
    padding: 6px 14px;
    margin-left: 10px;
    border-radius: 6px;
    font-weight: bold;
}

.sign-in-btn:hover {
    background-color: darkblue;
    color: white;
}

.hero {
    position: relative;
    height: 500px;
    background-image: url(images/zillow-hero1.png);
    background-size: cover;
    background-position: center;
}

.hero-overlay {
    width: 100%;
    height: 100%;
    background: linear-gradient(rgba (0,0,0,0.55) rgba(0,0,0,0.75));
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-content {
    text-align: center;
    color: white;
    max-width: 600px;
    margin-left: 40px;
}

.hero-title {
    font-size: 62px;
    font: open sans, sans-serif;
    font-weight: 700px;
    margin-bottom: 30px;
}

.search-bar {
    display: flex;
    width: 100%;
    max-width: 750px;
    margin: 20px 0,0,0;
    background: white;
    border-radius: 6px;
    overflow: hidden;
    border: 1px solid white;
}

.search-bar input {
    flex: 1;
    padding: 14px 20px;
    border: none;
    font-size: 16px;
    outline: none;
}

.search-btn {
    background: white;
    border: none;
    padding: 0 24px;
    font-size: 16px;
    cursor: pointer;
}

.search-btn:hover {
    background-color: rgb(198, 189, 189);
    color: white;
}

.sign-in-logo-area {
    display: flex;
    justify-content: left;
    margin-left: 70px;
    flex: 1;
}

.sign-in-logo {
    width: 140px;
    height: auto;
    display: block;
}

.matching-title {
    text-align: center;
    font-size: 30px;
    margin-top: 20px;
    font: open sans, sans-serif;
}

.swipe-container {
    width: 350px;
    margin: 0 auto;
    text-align: center;
    margin-top: 40px;
}

.card {
    width: 100%;
    height: 350px;
    padding: 15px;
    border-radius: 12px;
    background: white;
    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
}

.card img {
    width: 100%;
    height: 150px;
    object-fit: cover;
    border-radius: 10px;
}

.buttons {
    display: flex;
    justify-content: space-around;
    margin-top: 20px;
}

.buttons button {
    font-size: 28px;
    padding: 10px 20px;
    border-radius: 50%;
    border: none;
    cursor: pointer;
    background: #eee;
    transition: 0.2s;
}

.buttons button:hover {
    transform: scale(1.1);
}

body-quiz {
    font-family: Arial, sans-serif;
    background: #f5f7fa;
    margin: 0;
    padding: 0;
}

.container-quiz {
    max-width: 900px;
    margin: 40px auto;
    background: white;
    padding: 30px;
    border-radius: 12px;
    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
}

h1-quiz {
    text-align: center;
    margin-bottom: 25px;
    color: #333;
}

.section-title-quiz {
    font-size: 20px;
    margin-top: 25px;
    margin-bottom: 10px;
    color: #444;
    font-weight: bold;
}

.grid-quiz {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
}

.card-quiz {
    background: #fafafa;
    padding: 20px;
    border-radius: 10px;
    border: 1px solid #ddd;
}

label-quiz {
    font-weight: bold;
    display: block;
    margin-bottom: 6px;
}

input, select {
    width: 100%;
    padding: 10px;
    border-radius: 6px;
    border: 1px solid #ccc;
    margin-top: 5px;
}

.checkbox-group {
    display: flex;
    flex-direction: column;
    gap: 8px;
    margin-top: 10px;
}

.submit-btn-quiz {
    margin-top: 30px;
    width: 100%;
    padding: 15px;
    background: #0077ff;
    color: white;
    border: none;
    border-radius: 8px;
    font-size: 18px;
    cursor: pointer;
}

.submit-btn-quiz:hover {
    background: #005fcc;
}

